2015-03-26  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (auth_printf, auth_send, auth_gets): Remove functions.

	* misc/network.h: Remove functions prototypes.

2015-03-25  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_file.c (openvas_export_file_name): Remove useless
	variables values setting.

	* nasl/nasl_packet_forgery.c (set_tcp_elements, nasl_send_packets),
	nasl/nasl_grammar.y (mylex): Fix null pointer checks.

	* misc/internal_com.h (INTERNAL_COMM_CTRL_STOP): Remove inused
	definition.

2015-03-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* base/openvas_file.c (openvas_export_file_name): Check that strings are
	long enough beofre g_strndup.  Check if strptime return is NULL before
	calling strlen on it.  Add missing space.

2015-03-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_delete_port_list_ext): New function.

	* omp/omp.h: Add header accordingly.

2015-03-23  Michael Wiegand <michael.wiegand@greenbone.net>

	Fix includes of math.h.

	* nasl/nasl_builtin_openvas_tcp_scanner.c: Add reason for include.

	* nasl/nasl_scanner_glue.c: Remove superfluous include.

2015-03-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeLists.txt: Remove duplicate flags.

2015-03-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Document what needs to be done to build a statically linked
	version of OpenVAS Libaries.

2015-03-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* libopenvas_misc.pc.in: Set libgcrypt as "Libs.private" so pkg-config
	knows it is needed for static linking against libopenvas_misc.

2015-03-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt: Build test-hosts only with dynamic linking for
	the time being due to issue with statically linking the binary. Add
	TODO.

2015-03-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* libopenvas_base.pc.in: Make gio dependency visible for pkg-config.
