@@ -1,3 +1,9 @@
+2015-03-27  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* nasl/nasl_builtin_openvas_tcp_scanner.c (banner_grab): Remove unused
+	hostinfos function argument.
+	(plugin_run_openvas_tcp_scanner): Adjust function call.
+
 2015-03-26  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* misc/network.c (auth_printf, auth_send, auth_gets): Remove functions.
